# demikernel

./: .gitignore  .gitmodules  Makefile  err.out
benchmarking/: gen_cmdline.py  read_devices.sh  sweep_devices.sh
benchmarking/jupyter-stuff/jupyter/: 10s-wseq-fsync-fixed-bs512-all-qs-clean-modified-sync.ipynb  1mil-all-optane-dif-malloc.ipynb  1mil-all-ssd-optane-no-sleep.ipynb  1mil-all-ssd-optane.ipynb  1mil-optane-delay.ipynb  1mil-pin-same-core-locks.ipynb  1mil-pin-same-core-no-locks-pcm-slow-complete.ipynb  1mil-pin-same-core-no-locks-pcm.ipynb  1mil-pin-same-core-no-locks2.ipynb  1mil-pin-same-core-no-locks3.ipynb  1mil-pin-same-core-no-locks4.ipynb  1mil-pin-same-core-no-locks5.ipynb  1mil-pin-same-core.ipynb  1mil-testing.ipynb  1mil-testing2.ipynb  1mil-write-seq-busy-wait.ipynb  1mil-write-seq-poll-time.ipynb  1mil-write-seq-timed-submit.ipynb  1mil-write-seq-with-qd.ipynb  1mil-write-seq.ipynb  2min-fsync-wrand-q1-fixed-bs-max8k-plots.ipynb  2min-fsync-wrand-q8-fixed-bs-max8k-plots.ipynb  2min-fsync-wseq-q1-fixed-bs-max8k-plots.ipynb  2min-fsync-wseq-q8-fixed-bs-max8k-plots.ipynb  2min-randread-q1-fixed-bs-max8k-plots.ipynb  2min-randread-q8-fixed-bs-max8k-plots.ipynb  2min-read-q1-fixed-bs-max8k-plots.ipynb  2min-read-q8-fixed-bs-max8k-plots.ipynb  2min-rrand-fsync-fixed-bs-max8k-all-qs.ipynb  2min-rseq-fsync-fixed-bs-max8k-all-qs.ipynb  2min-wrand-fsync-fixed-bs-max8k-all-qs.ipynb  2min-wrand-q1-fixed-bs-max8k-plots.ipynb  2min-wrand-q8-fixed-bs-max8k-plots.ipynb  2min-write-bw.ipynb  2min-write-tp-v-lat.ipynb  2min-wseq-fixed-bs-max8k-all-qs.ipynb  2min-wseq-fsync-fixed-bs-max8k-all-qs-Copy1.ipynb  2min-wseq-fsync-fixed-bs-max8k-all-qs-ci.ipynb  2min-wseq-fsync-fixed-bs-max8k-all-qs-clean-modified-sync.ipynb  2min-wseq-fsync-fixed-bs-max8k-all-qs-slower.ipynb  (+7 more)
benchmarking/jupyter-stuff/jupyter_helpers/: data_aggregator.py  plot_helper.py
benchmarking/pcm-iio-ss/: lspci.out  pcm-iio.out  ubox1.out  ubox2.out
benchmarking/src/: Makefile  benchmark.cpp  benchmarking.c  benchmarkrunner.cpp  benchmarkrunner.h  io_u.h  options.cpp  options.h
benchmarking/src/iodrivers/: driver_types.h  iodriver.cpp  iodriver.h  spdk_nvme.cpp  spdk_nvme.h  sync_read_write.cpp  sync_read_write.h
benchmarking/src/pcm/: pcie_monitor.cpp  pcie_monitor.h
benchmarking/src/utils/: fixed_queue.cpp  fixed_queue.h  parsing.cpp  parsing.h  threading.cpp  threading.h  time_tracking.cpp  time_tracking.h
benchmarking/src/workgenerators/: workgenerator.cpp  workgenerator.h
include/dmtr/: latency.h  libos.h  sga.h  types.h
include/dmtr/libos/: io_queue.hh  io_queue_api.hh  timer_queue.hh
scripts/setup/: dpdk.sh
src/: Cargo.toml
src/c++/apps/: CMakeLists.txt  redis.conf
src/c++/apps/echo/: CMakeLists.txt  capnproto.cc  capnproto.hh  common.hh  cornflakes.cc  cornflakes.hh  dmtr_tcp_client.cc  dmtr_tcp_server.cc  dmtr_udp_client.cc  dmtr_udp_server.cc  extra_malloc.cc  extra_malloc.hh  extra_malloc_no_malloc.cc  extra_malloc_no_malloc.hh  extra_malloc_no_str.cc  extra_malloc_no_str.hh  extra_malloc_single_memcpy.cc  extra_malloc_single_memcpy.hh  extramalloc.hh  flatbuffers.cc  flatbuffers.hh  message.cc  message.hh  protobuf.cc  protobuf.hh  protobytes.cc  protobytes.hh  stress.capnp  stress.fbs  stress.proto  stress_bytes.proto  stress_cornflakes.hh
src/c++/apps/simplekv/: CMakeLists.txt  capnproto.cc  capnproto.hh  common.hh  dmtr_tcp_client.cc  dmtr_tcp_server.cc  flatbuffers.cc  flatbuffers.hh  handcrafted.cc  handcrafted.hh  kv.cc  kv.hh  message.cc  message.hh  protobuf.cc  protobuf.hh  stress.capnp  stress.fbs  stress.proto
src/c++/latency/: latency.cc
src/c++/libos/catnip_libos/: catnip_libos_queue.hh
src/c++/libos/common/: io_queue.cc  io_queue_api.cc  sga.c  timer_queue.cc  wait.cc
src/c++/libos/lwip/: lwip_libos.cc  lwip_queue.cc  lwip_queue.hh
src/c++/libos/posix/: posix_libos.cc  posix_queue.cc
src/c++/libos/rdma/: rdma_libos.cc
src/catnap-libos/: Cargo.toml
src/catnip-libos/: Cargo.toml
src/catnip-libos/src/: lib.rs  memory.rs
src/demikernel/: Cargo.toml
src/rust/: Cargo.toml
src/rust/catnap/: Cargo.toml
src/rust/catnap/src/: endpoint.rs  engine.rs  libos.rs  test_helpers.rs
src/rust/catnap/src/sockets/: mod.rs  tcpsocket.rs  udpsocket.rs
src/rust/catnap/tests/: udp_loop.rs
src/rust/catnip/: Cargo.toml
src/rust/catnip/src/: engine.rs  interop.rs  lib.rs  libos.rs  operations.rs  runtime.rs  scheduler.rs  test_helpers.rs  tracing.rs
src/rust/catnip/src/collections/hashttlcache/: mod.rs
src/rust/catnip/src/protocols/arp/: pdu.rs  peer.rs
src/rust/catnip/src/protocols/arp/cache/: mod.rs
src/rust/catnip/src/protocols/ethernet2/: frame.rs
src/rust/catnip/src/protocols/icmpv4/: datagram.rs
src/rust/catnip/src/protocols/ip/: port.rs
src/rust/catnip/src/protocols/ipv4/: datagram.rs  peer.rs
src/rust/catnip/src/protocols/tcp/: active_open.rs  constants.rs  operations.rs  options.rs  passive_open.rs  peer.rs  segment.rs
src/rust/catnip/src/protocols/tcp/established/background/: acknowledger.rs  sender.rs
src/rust/catnip/src/protocols/tcp/established/state/: mod.rs  receiver.rs  sender.rs
src/rust/catnip/src/protocols/udp/: datagram.rs  peer.rs
src/rust/catnip/src/sync/: mod.rs  threadsafe.rs  threadunsafe.rs
src/rust/catnip/tests/: tcp_loop.rs  udp_echo.rs  udp_loop.rs
src/rust/catnip_libos/: Cargo.toml
src/rust/catnip_libos/src/: dpdk.rs  lib.rs  mbuf.rs  memory.rs  runtime.rs
